# pytorch-entity-embedding-rossmann

./: pyproject.toml
src/pytorch_entity_embedding_rossmann/: EENN.py  EENNBinary.py  EENNRegression.py  datasets.py  test_models.py
src/pytorch_entity_embedding_rossmann/arquive/: EntEmbNN.py  EntEmbNN2.py
src/pytorch_entity_embedding_rossmann/datasets/: __init__.py  csv2dicts.py  download_rossmann.py  env.py  get_X_train_test_data.py  get_rossmann.py  set_nan_as_string.py
src/pytorch_entity_embedding_rossmann/tests/: test_classification_nn_vs_sklearn.py  test_regression_nn_vs_sklearn.py  test_rossmann.py
