[project]
name = "pytorch-entity-embedding-rossmann"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "devcomfort", email = "kimdonghyun026@gmail.com" }
]
dependencies = [
    "pandas>=2.2.3",
    "numpy>=2.1.2",
    "scikit-learn>=1.5.2",
    "torch>=2.4.1",
    "requests>=2.32.3",
    "pytest>=8.3.3",
    "pandas-stubs>=2.2.3.241009",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pytorch_entity_embedding_rossmann"]
